--- a/250428_streamlit/CA_Water.ipynb
+++ b/250428_streamlit/CA_Water.ipynb
@@ -18,51 +18,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "id": "cf0546d9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\HB\\miniconda3\\envs\\KPro_HB\\lib\\site-packages\\IPython\\core\\events.py:82: UserWarning: Glyph 53441 (\\N{HANGUL SYLLABLE TAG}) missing from font(s) DejaVu Sans.\n",
-      "  func(*args, **kwargs)\n",
-      "c:\\Users\\HB\\miniconda3\\envs\\KPro_HB\\lib\\site-packages\\IPython\\core\\events.py:82: UserWarning: Glyph 46020 (\\N{HANGUL SYLLABLE DO}) missing from font(s) DejaVu Sans.\n",
-      "  func(*args, **kwargs)\n",
-      "c:\\Users\\HB\\miniconda3\\envs\\KPro_HB\\lib\\site-packages\\IPython\\core\\events.py:82: UserWarning: Glyph 50896 (\\N{HANGUL SYLLABLE WEON}) missing from font(s) DejaVu Sans.\n",
-      "  func(*args, **kwargs)\n",
-      "c:\\Users\\HB\\miniconda3\\envs\\KPro_HB\\lib\\site-packages\\IPython\\core\\events.py:82: UserWarning: Glyph 47000 (\\N{HANGUL SYLLABLE RAE}) missing from font(s) DejaVu Sans.\n",
-      "  func(*args, **kwargs)\n",
-      "c:\\Users\\HB\\miniconda3\\envs\\KPro_HB\\lib\\site-packages\\IPython\\core\\events.py:82: UserWarning: Glyph 48516 (\\N{HANGUL SYLLABLE BUN}) missing from font(s) DejaVu Sans.\n",
-      "  func(*args, **kwargs)\n",
-      "c:\\Users\\HB\\miniconda3\\envs\\KPro_HB\\lib\\site-packages\\IPython\\core\\events.py:82: UserWarning: Glyph 54252 (\\N{HANGUL SYLLABLE PO}) missing from font(s) DejaVu Sans.\n",
-      "  func(*args, **kwargs)\n",
-      "c:\\Users\\HB\\miniconda3\\envs\\KPro_HB\\lib\\site-packages\\IPython\\core\\events.py:82: UserWarning: Glyph 47196 (\\N{HANGUL SYLLABLE RO}) missing from font(s) DejaVu Sans.\n",
-      "  func(*args, **kwargs)\n",
-      "c:\\Users\\HB\\miniconda3\\envs\\KPro_HB\\lib\\site-packages\\IPython\\core\\events.py:82: UserWarning: Glyph 44536 (\\N{HANGUL SYLLABLE GEU}) missing from font(s) DejaVu Sans.\n",
-      "  func(*args, **kwargs)\n",
-      "c:\\Users\\HB\\miniconda3\\envs\\KPro_HB\\lib\\site-packages\\IPython\\core\\events.py:82: UserWarning: Glyph 48320 (\\N{HANGUL SYLLABLE BYEON}) missing from font(s) DejaVu Sans.\n",
-      "  func(*args, **kwargs)\n",
-      "c:\\Users\\HB\\miniconda3\\envs\\KPro_HB\\lib\\site-packages\\IPython\\core\\events.py:82: UserWarning: Glyph 54872 (\\N{HANGUL SYLLABLE HWAN}) missing from font(s) DejaVu Sans.\n",
-      "  func(*args, **kwargs)\n",
-      "c:\\Users\\HB\\miniconda3\\envs\\KPro_HB\\lib\\site-packages\\IPython\\core\\events.py:82: UserWarning: Glyph 50557 (\\N{HANGUL SYLLABLE YAG}) missing from font(s) DejaVu Sans.\n",
-      "  func(*args, **kwargs)\n",
-      "c:\\Users\\HB\\miniconda3\\envs\\KPro_HB\\lib\\site-packages\\IPython\\core\\events.py:82: UserWarning: Glyph 54408 (\\N{HANGUL SYLLABLE PUM}) missing from font(s) DejaVu Sans.\n",
-      "  func(*args, **kwargs)\n",
-      "c:\\Users\\HB\\miniconda3\\envs\\KPro_HB\\lib\\site-packages\\IPython\\core\\events.py:82: UserWarning: Glyph 51452 (\\N{HANGUL SYLLABLE JU}) missing from font(s) DejaVu Sans.\n",
-      "  func(*args, **kwargs)\n",
-      "c:\\Users\\HB\\miniconda3\\envs\\KPro_HB\\lib\\site-packages\\IPython\\core\\events.py:82: UserWarning: Glyph 51077 (\\N{HANGUL SYLLABLE IB}) missing from font(s) DejaVu Sans.\n",
-      "  func(*args, **kwargs)\n",
-      "c:\\Users\\HB\\miniconda3\\envs\\KPro_HB\\lib\\site-packages\\IPython\\core\\events.py:82: UserWarning: Glyph 50984 (\\N{HANGUL SYLLABLE YUL}) missing from font(s) DejaVu Sans.\n",
-      "  func(*args, **kwargs)\n",
-      "c:\\Users\\HB\\miniconda3\\envs\\KPro_HB\\lib\\site-packages\\IPython\\core\\events.py:82: UserWarning: Glyph 44228 (\\N{HANGUL SYLLABLE GYE}) missing from font(s) DejaVu Sans.\n",
-      "  func(*args, **kwargs)\n",
-      "c:\\Users\\HB\\miniconda3\\envs\\KPro_HB\\lib\\site-packages\\IPython\\core\\events.py:82: UserWarning: Glyph 49328 (\\N{HANGUL SYLLABLE SAN}) missing from font(s) DejaVu Sans.\n",
-      "  func(*args, **kwargs)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import streamlit as st\n",
     "import pandas as pd\n",
@@ -131,53 +90,89 @@
    "execution_count": null,
    "id": "1c08cb43",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\HB\\AppData\\Local\\Temp\\ipykernel_13044\\3613894599.py:2: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv('./data/CA_Water_Quality.csv', encoding=\"CP949\")\n"
+     ]
+    }
+   ],
    "source": [
-    "def load_data():\n",
-    "    # 데이터 불러오기\n",
-    "    df = pd.read_csv('./data/CA_Water_Quality.csv', encoding=\"CP949\")\n",
     "\n",
-    "    # df[\"로그 탁도\"] = np.log10(df[\"탁도\"])\n",
-    "    # df[\"로그 응집제 주입률\"] = np.log10(int(df[\"약품주입율 계산\"]))\n",
-    "    # np.log10은 데이터 전처리 후 사용\n",
-    "    \n",
-    "    \n",
-    "    df.rename(columns={'약품주입율 계산': '약품주입율'}, inplace=True)\n",
+    "# 데이터 불러오기\n",
+    "df = pd.read_csv('./data/CA_Water_Quality.csv', encoding=\"CP949\", low_memory=False)\n",
+    "\n",
+    "# df[\"로그 탁도\"] = np.log10(df[\"탁도\"])\n",
+    "# df[\"로그 응집제 주입률\"] = np.log10(int(df[\"약품주입율 계산\"]))\n",
+    "# np.log10은 데이터 전처리 후 사용\n",
     "\n",
     "\n",
-    "    X = df[\n",
-    "        [\n",
-    "            \"탁도\",\n",
-    "            \"pH\",\n",
-    "            \"알칼리도\",\n",
-    "            \"전기전도도\",\n",
-    "            \"수온\",\n",
-    "            \"유입유량\",\n",
-    "            \"침전탁도\",\n",
-    "            \"약품주입율\"\n",
-    "        ]\n",
+    "df.rename(columns={'약품주입율 계산': '약품주입율'}, inplace=True)\n",
+    "\n",
+    "\n",
+    "df = df[\n",
+    "    [\n",
+    "        \"탁도\",\n",
+    "        \"pH\",\n",
+    "        \"알칼리도\",\n",
+    "        \"전기전도도\",\n",
+    "        \"수온\",\n",
+    "        \"유입유량\",\n",
+    "        \"침전탁도\",\n",
+    "        \"약품주입율\"\n",
     "    ]\n",
+    "]\n",
     "\n",
-    "    # 두 컬럼만 숫자로 변환 (숫자가 아닌 값은 NaN으로 처리)\n",
-    "    df['탁도'] = pd.to_numeric(df['탁도'], errors='coerce')\n",
-    "    df['약품주입율 계산'] = pd.to_numeric(df['약품주입율 계산'], errors='coerce')\n",
-    "\n",
-    "    # 변환 후 NaN 확인 (비정상값이 있었는지 확인 가능)\n",
-    "    print(df[['탁도', '약품주입율 계산']].isna().sum())\n",
-    "\n",
-    "    # 탁도 0개, 약품주입율 계산 11개 데이터가 na로, 행 삭제\n",
-    "\n",
-    "    df = df.dropna(subset=['탁도', '약품주입율 계산'])\n",
-    "\n",
-    "    # 탁도 분포에 따라 로그 변환 실행\n",
-    "    df['로그 탁도'] = np.log10(df[\"탁도\"])\n",
-    "\n",
-    "    return X\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
+   "id": "a400f574",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "탁도        0\n",
+      "약품주입율    11\n",
+      "dtype: int64\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\HB\\miniconda3\\envs\\KPro_HB\\lib\\site-packages\\pandas\\core\\arraylike.py:399: RuntimeWarning: divide by zero encountered in log10\n",
+      "  result = getattr(ufunc, method)(*inputs, **kwargs)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# 두 컬럼만 숫자로 변환 (숫자가 아닌 값은 NaN으로 처리)\n",
+    "df['탁도'] = pd.to_numeric(df['탁도'], errors='coerce')\n",
+    "df['약품주입율'] = pd.to_numeric(df['약품주입율'], errors='coerce')\n",
+    "\n",
+    "# 변환 후 NaN 확인 (비정상값이 있었는지 확인 가능)\n",
+    "print(df[['탁도', '약품주입율']].isna().sum())\n",
+    "\n",
+    "# 탁도 0개, 약품주입율 계산 11개 데이터가 na로, 행 삭제\n",
+    "\n",
+    "df = df.dropna(subset=['탁도', '약품주입율'])\n",
+    "\n",
+    "# 탁도 분포에 따라 로그 변환 실행\n",
+    "df['로그 탁도'] = np.log10(df[\"탁도\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "e61ff604",
    "metadata": {},
    "outputs": [
@@ -185,10 +180,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\HB\\AppData\\Local\\Temp\\ipykernel_8692\\2249610441.py:3: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv('./data/CA_Water_Quality.csv', encoding=\"CP949\")\n",
-      "c:\\Users\\HB\\miniconda3\\envs\\KPro_HB\\lib\\site-packages\\pandas\\core\\arraylike.py:399: RuntimeWarning: divide by zero encountered in log10\n",
-      "  result = getattr(ufunc, method)(*inputs, **kwargs)\n"
+      "c:\\Users\\HB\\miniconda3\\envs\\KPro_HB\\lib\\site-packages\\pandas\\core\\nanops.py:1016: RuntimeWarning: invalid value encountered in subtract\n",
+      "  sqr = _ensure_numeric((avg - values) ** 2)\n"
      ]
     },
     {
@@ -220,85 +213,150 @@
        "      <th>유입유량</th>\n",
        "      <th>침전탁도</th>\n",
        "      <th>약품주입율</th>\n",
+       "      <th>로그 탁도</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2.59</td>\n",
-       "      <td>7.34</td>\n",
-       "      <td>35.88</td>\n",
-       "      <td>145.31</td>\n",
-       "      <td>10.13</td>\n",
-       "      <td>12557.0</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>16.0</td>\n",
+       "      <th>count</th>\n",
+       "      <td>526970.000000</td>\n",
+       "      <td>526970.000000</td>\n",
+       "      <td>526970.000000</td>\n",
+       "      <td>526970.00000</td>\n",
+       "      <td>526970.000000</td>\n",
+       "      <td>526970.000000</td>\n",
+       "      <td>526970.000000</td>\n",
+       "      <td>526970.000000</td>\n",
+       "      <td>5.269700e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2.63</td>\n",
-       "      <td>7.36</td>\n",
-       "      <td>35.88</td>\n",
-       "      <td>145.16</td>\n",
-       "      <td>10.13</td>\n",
-       "      <td>12497.0</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>16.0</td>\n",
+       "      <th>mean</th>\n",
+       "      <td>31.184532</td>\n",
+       "      <td>7.216701</td>\n",
+       "      <td>30.193983</td>\n",
+       "      <td>137.06379</td>\n",
+       "      <td>14.891338</td>\n",
+       "      <td>12005.192493</td>\n",
+       "      <td>32.747157</td>\n",
+       "      <td>22.972786</td>\n",
+       "      <td>-inf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2.63</td>\n",
-       "      <td>7.35</td>\n",
-       "      <td>35.88</td>\n",
-       "      <td>145.16</td>\n",
-       "      <td>10.13</td>\n",
-       "      <td>12498.0</td>\n",
-       "      <td>0.32</td>\n",
-       "      <td>16.0</td>\n",
+       "      <th>std</th>\n",
+       "      <td>231.648163</td>\n",
+       "      <td>0.828031</td>\n",
+       "      <td>5.294893</td>\n",
+       "      <td>22.13868</td>\n",
+       "      <td>19.550480</td>\n",
+       "      <td>1663.340725</td>\n",
+       "      <td>341.258221</td>\n",
+       "      <td>13.894182</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2.63</td>\n",
-       "      <td>7.31</td>\n",
-       "      <td>35.88</td>\n",
-       "      <td>145.31</td>\n",
-       "      <td>10.13</td>\n",
-       "      <td>12570.0</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>16.0</td>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-inf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2.59</td>\n",
-       "      <td>7.31</td>\n",
-       "      <td>35.84</td>\n",
-       "      <td>145.31</td>\n",
-       "      <td>10.13</td>\n",
-       "      <td>12614.0</td>\n",
-       "      <td>0.34</td>\n",
-       "      <td>16.0</td>\n",
+       "      <th>25%</th>\n",
+       "      <td>1.880000</td>\n",
+       "      <td>7.090000</td>\n",
+       "      <td>26.660000</td>\n",
+       "      <td>119.28000</td>\n",
+       "      <td>9.170000</td>\n",
+       "      <td>11095.000000</td>\n",
+       "      <td>0.490000</td>\n",
+       "      <td>13.000000</td>\n",
+       "      <td>2.741578e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2.600000</td>\n",
+       "      <td>7.360000</td>\n",
+       "      <td>32.210000</td>\n",
+       "      <td>146.41000</td>\n",
+       "      <td>13.550000</td>\n",
+       "      <td>11996.000000</td>\n",
+       "      <td>0.690000</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>4.149733e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>12.870000</td>\n",
+       "      <td>7.460000</td>\n",
+       "      <td>33.880000</td>\n",
+       "      <td>153.44000</td>\n",
+       "      <td>21.860000</td>\n",
+       "      <td>13047.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>1.109579e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2755.000000</td>\n",
+       "      <td>7.710000</td>\n",
+       "      <td>41.490000</td>\n",
+       "      <td>172.09000</td>\n",
+       "      <td>7814.380000</td>\n",
+       "      <td>142090.000000</td>\n",
+       "      <td>4954.510000</td>\n",
+       "      <td>92.000000</td>\n",
+       "      <td>3.440122e+00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     탁도    pH   알칼리도   전기전도도     수온     유입유량  침전탁도 약품주입율\n",
-       "0  2.59  7.34  35.88  145.31  10.13  12557.0  0.33  16.0\n",
-       "1  2.63  7.36  35.88  145.16  10.13  12497.0  0.33  16.0\n",
-       "2  2.63  7.35  35.88  145.16  10.13  12498.0  0.32  16.0\n",
-       "3  2.63  7.31  35.88  145.31  10.13  12570.0  0.33  16.0\n",
-       "4  2.59  7.31  35.84  145.31  10.13  12614.0  0.34  16.0"
+       "                  탁도             pH           알칼리도         전기전도도  \\\n",
+       "count  526970.000000  526970.000000  526970.000000  526970.00000   \n",
+       "mean       31.184532       7.216701      30.193983     137.06379   \n",
+       "std       231.648163       0.828031       5.294893      22.13868   \n",
+       "min         0.000000       0.000000       0.000000       0.00000   \n",
+       "25%         1.880000       7.090000      26.660000     119.28000   \n",
+       "50%         2.600000       7.360000      32.210000     146.41000   \n",
+       "75%        12.870000       7.460000      33.880000     153.44000   \n",
+       "max      2755.000000       7.710000      41.490000     172.09000   \n",
+       "\n",
+       "                  수온           유입유량           침전탁도          약품주입율  \\\n",
+       "count  526970.000000  526970.000000  526970.000000  526970.000000   \n",
+       "mean       14.891338   12005.192493      32.747157      22.972786   \n",
+       "std        19.550480    1663.340725     341.258221      13.894182   \n",
+       "min         0.000000       0.000000       0.000000       0.000000   \n",
+       "25%         9.170000   11095.000000       0.490000      13.000000   \n",
+       "50%        13.550000   11996.000000       0.690000      16.000000   \n",
+       "75%        21.860000   13047.000000       1.000000      35.000000   \n",
+       "max      7814.380000  142090.000000    4954.510000      92.000000   \n",
+       "\n",
+       "              로그 탁도  \n",
+       "count  5.269700e+05  \n",
+       "mean           -inf  \n",
+       "std             NaN  \n",
+       "min            -inf  \n",
+       "25%    2.741578e-01  \n",
+       "50%    4.149733e-01  \n",
+       "75%    1.109579e+00  \n",
+       "max    3.440122e+00  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_raw = load_data()\n",
-    "df_raw.head()"
+    "df_raw = df.copy()\n",
+    "df_raw.describe()"
    ]
   },
   {
